fixed croppie

--- a/static/uikit.css
+++ b/static/uikit.css
@@ -3719,7 +3719,7 @@ ul.uk-nav-sub {
 
 .uk-modal-tall {
     padding: 0;
-    background: rgba(0, 0, 0, 0.125);
+    background: rgba(0, 0, 0, 0.25);
 }
 
 .uk-modal-tall:active
@@ -3738,7 +3738,7 @@ ul.uk-nav-sub {
     transform: translateY(0);
     display: flex;
     flex-direction: column;
-    box-shadow: 0 -1px 4px 0 #777;
+    box-shadow: 0 -1px 3px 0 #999;
 }
 
 .uk-modal-tall .uk-modal-body {
